--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.7",
+    "@astrojs/react": "^4.3.0",
+    "@types/react": "^19.1.6",
     "astro": "^5.7.13",
-    "tailwindcss": "^4.1.7"
+    "nanostores": "^1.0.1",
+    "react": "^19.1.0"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.1"
   }
 }
