--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@astrojs/react": "^4.3.0",
     "@types/react": "^19.1.6",
     "astro": "^5.7.13",
+    "framer-motion": "^12.16.0",
     "nanostores": "^1.0.1",
-    "react": "^19.1.0"
+    "react": "^19.1.0",
+    "react-i18next": "^15.5.2",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
